Visual fixes for spacing in the settings menu.

--- a/client/stylesheets/settings-screen.css
+++ b/client/stylesheets/settings-screen.css
@@ -53,6 +53,7 @@
   width: 150px;
   overflow: hidden;
   border-radius: 50%;
+  margin-top: 1em;
 }
 #profile-picture-upload-container img {
   height: 150px;
